# TrigBiPy

./: .gitignore  BUILD.bazel  README.md  paper.aux  paper.out  paper.tex  paper.toc  paper_de.tex  paper_en.tex  trigbipy_mvp.py  version
.github/workflows/: main.yml
